# mpi_matrix_mult_optimization

./: .gitignore  CMakeLists.txt  README.md
benchmark/: generate_plots.py  plot_results.py  run_benchmarks.sh
results/: raw_timings.csv
src/: cannon_matmul.cpp  naive_matmul.cpp
